<resources>
    <string name="app_name">Playback Music</string>
    <string name="eq">Equalizer</string>

    <!--Ads ID-->
    <string name="appAdId">ca-app-pub-8188016146639430~6373052337</string>

    <string name="addToPlaylistFragId">ca-app-pub-8188016146639430/7111418937</string>
    <string name="playlistFragId">ca-app-pub-8188016146639430/7302990629</string>
    <string name="albumFragId">ca-app-pub-8188016146639430/9546010589</string>
    <string name="artistFragId">ca-app-pub-8188016146639430/8041357220</string>

    <string name="AlbumSongsActId">ca-app-pub-8188016146639430/4061464203</string>
    <string name="SingleSongActId">ca-app-pub-8188016146639430/9182947846</string>
    <string name="artistSongsActId">ca-app-pub-8188016146639430/3527397146</string>
    <string name="playlistActId">ca-app-pub-8188016146639430/2597458851</string>
    <string name="searchActId">ca-app-pub-8188016146639430/2588600435</string>
    <string name="recentSongsActId">ca-app-pub-8188016146639430/3140098926</string>
    <string name="nowPlayingActId">ca-app-pub-8188016146639430/1243729172</string>
    <string name="tracksFragId">ca-app-pub-8188016146639430/7494562314</string>
    
    <string name="nativeAdvanceId">ca-app-pub-8188016146639430/1615506674</string>
    <string name="testNativeAdvanceId">ca-app-pub-3940256099942544/2247696110</string>

    <string name="ad_attribution">Ad</string>

    <string name="doit">do</string>
    <string name="prev">prev</string>
    <string name="playPause">playPause</string>
    <string name="next">next</string>
    <string name="close">close</string>
    <string name="favorite">favorite</string>

    <string name="playLists">PlayLists</string>
    <string name="playback_info">playback_info</string>
    <string name="DB">DB</string>

    <string name="recentAdded">Recent Added</string>
    <string name="lastPlayed">Last Played</string>
    <string name="appVersion">v1.0</string>
    <string name="support">Thanks for your Support. Made in India.</string>

    <string name="deleteMessage">Do you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notValid">Not a Valid Search</string>
    <string name="notValidLength">"Search Length Not Valid"</string>

    <string name="ID">ID</string>
    <string name="Shuffle">Shuffle</string>
    <string name="Repeat">Repeat</string>
    <string name="RepeatOne">RepeatOne</string>
    <string name="Started">Started</string>
    <string name="Songs">Songs</string>
    <string name="position">position</string>
    <string name="currentPlayingDuration">currentPlayingDuration</string>
    <string name="NormalSongs">NormalSongs</string>
    <string name="Shuffle_On">Shuffle On</string>
    <string name="Shuffle_Off">Shuffle Off</string>
    <string name="Repeat_On">Repeat All</string>
    <string name="Repeat_One">Repeat Single</string>
    <string name="Repeat_Off">Repeat Off</string>
    <string name="playAsong">Play A Song</string>
    <string name="added_To_Favorite">Song Added To Favorite</string>
    <string name="choose_Timer">Choose Timer</string>
    <string name="timeOff">Timer Off</string>
    <string name="mins15">Timer Set To 15 Mins</string>
    <string name="mins30">Timer Set To 30 Mins</string>
    <string name="mins45">Timer Set To 45 Mins</string>
    <string name="mins60">Timer Set To 60 Mins</string>
    <string name="mins90">Timer Set To 90 Mins</string>
    <string name="mins120">Timer Set To 120 Mins</string>
    <string name="playlist">Playlist</string>
    <string name="tracks">Tracks</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="music_Service">Music Service</string>
    <string name="PlaybackMusicService">PlaybackMusicService</string>
    <string name="Grant">Grant</string>
    <string name="dont">Don\'t</string>
    <string name="packageName">package</string>
    <string name="about">About Playback</string>
    <string name="permissionAlert">You have forcefully denied permissions.\n\nThis is Necessary and Important for the working of this APP.\n\nClick on \'Grant\' to grant permission</string>

    <!--Layouts-->
    <string name="select_Playlist">Select Playlist</string>
    <string name="album_Title">Album Title</string>
    <string name="song_Title">Song Title</string>
    <string name="song_Artist">Song Artist</string>
    <string name="album_SongNumbers">Album SongNumbers</string>
    <string name="song_Info">Song Info</string>
    <string name="fav">Favorite</string>

    <string name="time0">0:00</string>
    <string name="pipe">|</string>
    <string name="now_Playing">Now Playing</string>
    <string name="search_Here">Search Here</string>
    <string name="search">Search</string>
    <string name="playlist_Name">Playlist Name</string>
    <string name="Cancel">Cancel</string>
    <string name="ok">Create</string>
    <string name="createNewPlaylist">Create Playlist</string>
    <string name="shuffleLibrary">Shuffle Library</string>
    <string name="location">Location:</string>
    <string name="duration">Duration:</string>
    <string name="notAvailable">Not Available</string>
    <string name="composer">Composer:</string>
    <string name="album">Album:</string>
    <string name="artist">Artist:</string>
    <string name="saveInPlaylist">Add to Playlist</string>
    <string name="noSong">No Song for This Category</string>
    <string name="save_as_playlist">Save as Playlist</string>
    <string name="timer">Timer</string>
    <string name="sleep_after">Sleep After:</string>
    <string name="sleep_timer_title">Sleep Timer</string>
    <string name="time_text_off">Off</string>
    <string name="reverb_effect">Reverb Effect</string>
    <string name="preset">Preset</string>

    <plurals name="numberOfSongs">
        <item quantity="one">%d Song</item>
        <item quantity="other">%d Songs</item>
    </plurals>

    <string-array name="longPressItems">
        <item>Play</item>
        <item>Play This Only</item>
        <item>Play Next</item>
        <item>Add To Queue</item>
        <item>Add To Playlist</item>
        <item>Share</item>
        <item>Details</item>
    </string-array>

    <string-array name="longPressNowPlaying">
        <item>Play</item>
        <item>Add To Playlist</item>
        <item>Share</item>
        <item>Details</item>
    </string-array>

    <string-array name="longPressItemsRemove">
        <item>Play</item>
        <item>Play Next</item>
        <item>Add To Queue</item>
        <item>Remove From Playlist</item>
        <item>Share</item>
        <item>Details</item>
    </string-array>

    <string-array name="longPressItemsPlaylist">
        <item>Play Playlist</item>
        <item>Rename Playlist</item>
        <item>Delete Playlist</item>
    </string-array>
    <string-array name="timer">
        <item>15 Minutes</item>
        <item>30 Minutes</item>
        <item>45 Minutes</item>
        <item>60 Minutes</item>
        <item>90 Minutes</item>
        <item>120 Minutes</item>
    </string-array>
    <string-array name="tracks">
        <item>1 Track</item>
        <item>2 Tracks</item>
        <item>3 Tracks</item>
        <item>4 Tracks</item>
        <item>5 Tracks</item>
        <item>6 Tracks</item>
    </string-array>
    <string name="mostPlayed">Most Played</string>
    <string name="favTracks">My Favorites</string>

    <string name="back">Back</string>
    <string name="shuffle_library_songs">Shuffle Library Songs</string>
    <string name="mediaScan">Media Scan Completed</string>
    <string name="unableToFindMarketApp">Unable to find market app</string>
    <string name="tapToExit">Tap Again to Exit</string>

    <string name="newUpdate">New Update Available</string>
    <string name="updateMessage">\nCurrent Version: %1$s \nLatest Version: %2$s</string>
    <string name="updateButton">Update</string>
    <string name="updateLater">Not Now</string>

    <string name="permissionHead">Permission Required</string>
    <string name="permissionReason">Playback Music is a local audio player that exclusively plays songs and audio files stored on your device.\n\nTo access and play your music, the app requires the necessary permissions.</string>
    <string name="permissionAgree">Agree</string>

    <string name="noFileFound">No Song / Audio File Found</string>
    <string name="noFileFoundMessage">This Player will not work if your device have no Song / Audio file in storage.</string>
    <string name="noFileFoundButton">OK</string>

    <string name="noSongDialog">noSongDialog</string>
    <string name="noSongFoundToPlay">No Song Found to Play</string>
    <string name="my_playlists">My Playlists</string>
</resources>
